--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
-title: John Doe # your name (or website title) here
+title: Sichun Li # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  Welcome to my little analytics wonderland!
   <br><br>
-  Second description 
+  A data-driven storyteller, a fast learner, a critical thinker
   <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/sichunli/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
