--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,9 @@ logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Welcome to my little analytics wonderland!
   <br><br>
-  A data-driven storyteller, a fast learner, a critical thinker
+  A data-driven storyteller,
+  a fast learner,
+  a critical thinker
   <br><br>
   <a href="https://www.linkedin.com/in/sichunli/">View My LinkedIn Profile</a> 
   
