--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   a fast learner,  <br>  
   a critical thinker  <br>
   <br><br>
-  <a href="https://www.linkedin.com/in/sichunli/">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/sichun-li-aa9a92192/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
