--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Sichun Li # your name (or website title) here
-logo: "images/config2.jpg" width="100%" height="75" # your photo (or logo) here
+logo: <"images/config2.jpg" width="100%" height="75"> # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Welcome to my little analytics wonderland!
   <br><br>
