--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Sichun Li # your name (or website title) here
-logo: <img src="images/config2.jpg" width="100%" height="75%">
+logo: img src="images/config2.jpg" 
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Welcome to my little analytics wonderland!
   <br><br>
